--- a/style.css
+++ b/style.css
@@ -25,6 +25,50 @@ aside{
 
 header{
     grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.search-area,.profile-area{
+    display: grid;
+}
+
+.search-area{
+    grid-template-columns: 25px 1fr;
+}
+
+.profile-area{
+    grid-template-columns: repeat(3,1fr);
+}
+
+section{
+    display: grid;
+}
+
+section.lower-header{
+    grid-column: 1/-1;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+}
+
+.lower-header img{
+    grid-row: 1/3;
+    justify-self: end;
+    align-self: center;
+}
+
+.lower-header h2{
+    grid-area: 2/2/3/3;
+}
+
+.lower-header nav{
+    grid-area: 2/3/3/4;
+}
+
+nav>ul{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-items: center;
 }
 
 /*-----------------
