--- a/style.css
+++ b/style.css
@@ -1,26 +1,41 @@
-/*--------------------
-Grid Template Layout
---------------------*/
 :root{
     height: 100vh;
     max-width: 100vw;
+    font-family: 'Fira Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
     height: 100vh;
     max-width: 100vw;
 }
+
+/*--------------------
+CSS Vars - colors and sizes
+--------------------*/
+:root{
+    --stone:#a8a29e;
+    --mint:#4ade80;
+    --white-bg:#f5f5f5;
+    --forest-green:#14532d;
+    --grape:#4a1870;
+    --gas:#fde047;
+}
+
+/*--------------------
+Grid Template Layout
+--------------------*/
+
 .grid-container.fullpage{
     min-height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 8fr;
 }
 
 aside{
     grid-row: 1/4;
     display: grid;
-    grid-template-rows: 1fr 10fr;
+    grid-template-rows: 70px 7fr;
     grid-gap: 5px;
 }
 
@@ -28,6 +43,7 @@ header{
     grid-column: 2/3;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    grid-template-rows: 55px 55px;
 }
 
 .search-area,.profile-area{
@@ -79,9 +95,10 @@ nav>ul{
 }
 
 ul.aside-links{
-    justify-self: center;
+    justify-self: start;
     display: grid;
     grid-auto-rows: 38px;
+    gap: 15px;
 }
 
 /*-----------------
@@ -104,7 +121,7 @@ section.cards{
     display: grid;
     border: 1px solid silver;
     border-radius: 15px;
-    padding: 10px;
+    padding: 17px;
 }
 
 .card>h4{
@@ -122,8 +139,48 @@ Styling of components
 -------------------*/
 
 #search-bar{
-    max-width: 85%;
+    max-width: 80%;
     height: 27px;
     border-radius: 25px;
     
+}
+
+/*-------------------
+Styling of aside related elements
+-------------------*/
+
+li>img , aside>label>img{
+    height: 20px;
+    width: auto;
+}
+
+aside{
+    background-color: var(--grape);
+}
+
+aside>ul>li , aside>label{
+    font-size: max(1.5vw,0.8rem);
+    color: var(--white-bg);
+    padding: 0 1rem;
+}
+
+aside>label{
+    height: 100%;
+    font-size: 25px;
+    font-weight: bolder;
+    justify-items: start;
+    align-items: center;
+    padding-left: 5px;
+}
+
+aside>label>img{
+    height: 38px;
+    padding: 0.3vw;
+}
+
+.dashbaord-logo{
+    display: grid;
+    grid-template-columns: 35px 1fr;
+    grid-auto-rows: 50px;
+    gap: 10px;
 }
