--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@ body{
 CSS Vars - colors and sizes
 --------------------*/
 :root{
-    --stone:#a8a29e;
+    --stone:#c9c9c9;
     --mint:#4ade80;
     --white-bg:#f5f5f5;
     --forest-green:#14532d;
     --grape:#4a1870;
     --gas:#fde047;
+    --black-bg: #262626;
+    --fanta:#f97316;
+
 }
 
 /*--------------------
@@ -48,15 +51,19 @@ header{
 
 .search-area,.profile-area{
     display: grid;
+    justify-items: center;
+    align-items: center;
 }
 
 .search-area{
-    grid-template-columns: 15px 1fr;
-    grid-gap: 15px;
+    grid-template-columns: 5vw 1fr;
+    margin-left: 1rem;
 }
 
 .profile-area{
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: 2fr 1fr 2fr;
+    margin-right: 5vw;
+    gap: 2px;
 }
 
 section{
@@ -80,18 +87,19 @@ section.lower-header{
     grid-area: 2/2/3/3;
 }
 
-.lower-header nav{
-    grid-area: 2/3/3/4;
-}
 
 .lower-header>p{
     align-self: end;
 }
 
+.lower-header>nav{
+    grid-row: 1/-1;
+}
+
 nav>ul{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    justify-items: center;
+    align-items: center;
 }
 
 ul.aside-links{
@@ -139,9 +147,10 @@ Styling of components
 -------------------*/
 
 #search-bar{
-    max-width: 80%;
+    width: 90%;
     height: 27px;
     border-radius: 25px;
+    justify-self: start;
     
 }
 
@@ -183,4 +192,46 @@ aside>label>img{
     grid-template-columns: 35px 1fr;
     grid-auto-rows: 50px;
     gap: 10px;
+}
+
+
+/*-------------------
+Header styling
+-------------------*/
+
+.header-svg{
+    height: 24px;
+}
+
+.profile-pic{
+    height: 2.5rem;
+    width: 2.4rem;
+    border-radius: 17px;
+    justify-self: end;
+}
+
+.profile-name{
+    justify-self: start;
+}
+
+.big-profile-pic{
+    height: 4.5rem;
+    width: 4.4rem;
+    border-radius: 3.5rem;
+}
+
+input#search-bar{
+    background-color: var(--stone);
+    padding: 1vh 1.2vw;
+    border: none;
+    font-size: 20px;
+}
+
+.nav-btn{
+    height: 40px;
+    width: 90px;    
+}
+
+.header-nav{
+    display: grid;
 }
