--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 CSS Vars - colors and sizes
 --------------------*/
 :root{
-    --stone:#c9c9c9;
+    --stone:#e1e1e1;
     --mint:#4ade80;
     --white-bg:#f5f5f5;
     --forest-green:#14532d;
@@ -46,7 +46,6 @@ header{
     grid-column: 2/3;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 55px 55px;
     margin-bottom: 2vh;
 }
 
@@ -99,7 +98,8 @@ section.lower-header{
 }
 
 .lower-header>nav{
-    grid-row: 1/-1;
+    grid-row: 1/3;
+    grid-column: 3/4;
 }
 
 
@@ -111,7 +111,6 @@ nav>ul{
 }
 
 nav>ul>li{
-    height: 100%;
     width: 100%;
 }
 
@@ -128,13 +127,13 @@ Main grid layout
 main{
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 3.5fr 3.5fr;
+    grid-template-rows: 5rem 1fr 1fr;
 }
 
 section.cards{
     grid-row: 2/4;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(22rem,1fr));
     grid-gap: 25px;
 }
 
@@ -152,7 +151,7 @@ section.cards{
 section.side-cards{
     grid-row: 1/-1;
     display: grid;
-    grid-template-rows: 1fr 7fr 1fr 7fr;
+    grid-template-rows: 5rem 1fr 5rem 1fr;
 }
 
 /*-------------------
@@ -275,3 +274,56 @@ nav.header-nav{
     font-size: min(1rem,2.5vw);
 }
 
+
+/*-------------------
+Cards styling
+-------------------*/
+
+div.card,div.big-card{
+    background-color: var(--white-bg);
+}
+
+
+div.big-card{
+    border: 1px solid var(--stone);
+    border-radius: 15px;
+    width: max(25vw,19rem);
+    height: 85%;
+    align-self: center;
+    margin-left: 1rem;
+    margin-bottom: 5rem
+
+}
+
+section.cards{
+    margin-left: 1vw;
+}
+
+section.side-cards{
+    justify-items: center;
+}
+
+h2.star-movies , h2.trend{
+    align-self: end;
+    justify-self: center;
+    font-size: 1.6rem;
+    margin-bottom: 0.3rem;
+    letter-spacing: 0.4vh;
+    font-weight: 750;
+    margin-bottom: 2rem;
+}
+
+
+.card>h4{
+    font-size: 1.2rem;
+    letter-spacing: 0.2vh;
+    font-weight: bold;
+    align-self: center;
+}
+
+/*-------------------
+main section styling
+-------------------*/
+main{
+    background-color: var(--stone);
+}
