--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ aside{
 header{
     grid-column: 2/3;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
     margin-bottom: 2vh;
 }
 
@@ -61,8 +61,10 @@ header{
 }
 
 .profile-area{
-    grid-template-columns: 3fr 1fr 1fr;
+    grid-template-columns: 2rem 4rem 4rem;
     gap: 6px;
+    justify-items: end;
+    justify-self: end;
 }
 
 section{
@@ -76,7 +78,7 @@ section.profile-area>a:nth-child(1),section.profile-area>a:nth-child(2){
 section.lower-header{
     margin-top: 2vh;
     grid-column: 1/-1;
-    grid-template-columns: 5.5rem 1fr 3fr;
+    grid-template-columns: 5.5rem 1fr 2fr;
     grid-template-rows: repeat(2,1fr);
     grid-gap: 0.5vw;
 }
@@ -278,6 +280,10 @@ nav.header-nav{
 /*-------------------
 Cards styling
 -------------------*/
+
+div.card{
+    border-left: 5px solid var(--fanta);
+}
 
 div.card,div.big-card{
     background-color: var(--white-bg);
