--- a/style.css
+++ b/style.css
@@ -139,11 +139,15 @@ section.cards{
     grid-gap: 25px;
 }
 
-.card{
+/*-------------------
+Card layout
+-------------------*/
+div.card{
     display: grid;
+    grid-template-columns: 1rem 1fr;
     border: 1px solid silver;
     border-radius: 15px;
-    padding: 17px;
+    margin-left: 0.5rem;
 }
 
 .card>h4{
@@ -222,6 +226,7 @@ Header styling
     width: 2.7rem;
     border-radius: 2rem;
     justify-self: end;
+    border: 2px solid var(--fanta);
 }
 
 .profile-name{
@@ -282,7 +287,17 @@ Cards styling
 -------------------*/
 
 div.card{
-    border-left: 5px solid var(--fanta);
+
+}
+
+
+div.card>div.deco-bar{
+    border-radius: 15px 0 0 15px;
+    height: 100%;
+    width: 71%;
+    background:linear-gradient(var(--fanta),orange) ;
+    grid-row: 1/3;
+    position: relative;
 }
 
 div.card,div.big-card{
@@ -322,9 +337,14 @@ h2.star-movies , h2.trend{
 
 .card>h4{
     font-size: 1.2rem;
-    letter-spacing: 0.2vh;
+    letter-spacing: 0.6vh;
     font-weight: bold;
     align-self: center;
+    padding-top: 1.5rem;
+}
+
+.card>p{
+    padding: 1.5rem;
 }
 
 /*-------------------
