--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ Grid Template Layout
     min-height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 8fr;
+    grid-template-rows: 25vh 8fr;
 }
 
 aside{
